--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -25,4 +25,4 @@ block content
                 | 解答大概需要：
                 strong= question.timeLevelDesc()
               a.btn.edit-question(href='/job/' + job.id + '/question/' + question.id + '/edit') 编 辑
-              button.btn.btn-warning.del-question 删 除
+              button.btn.btn-warning.del-question(data-url='/job/' + job.id + '/question/' + question.id + '/update') 删 除
