--- a/assets/sass/questions.scss
+++ b/assets/sass/questions.scss
@@ -50,7 +50,11 @@
 
     .edit-question {
       position: absolute;
-      right: 56px;
+      right: 50px;
+    }
+
+    .answers {
+      right: 110px;
     }
   }
 }
