--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -7,12 +7,12 @@
 .show-job {
   h2 {
     padding-bottom: 0.5em;
-    border-bottom: 2px solid #777;
+    border-bottom: 3px solid #aaa;
   }
 
   .job-section {
     padding-bottom: 0.5em;
-    border-bottom: 1px dashed #777;
+    border-bottom: 2px solid #aaa;
   }
 
   .job-basic {
@@ -32,6 +32,44 @@
     button {
       font-size: 1.2em;
       width: 10%;
+    }
+  }
+
+  .question:not(:last-child) {
+    margin-bottom: 0.5em;
+    padding: 0.5em 0;
+    border-bottom: 1px solid #aaa;
+  }
+
+  .question:first-of-type {
+    padding-top: 0;
+  }
+
+  .question {
+    .content {
+      margin-top: 0.5em;
+      padding-bottom: 0.5em;
+      border-bottom: 1px dashed #777;
+    }
+
+    .answer {
+      overflow: hidden;
+      padding-top: 0.5em;
+
+      .ops {
+        float: right;
+        a {
+          margin-right: 0.5em;
+        }
+      }
+
+      .content {
+        margin-bottom: 0.5em;
+      }
+
+      .to-answer {
+        float: right;
+      }
     }
   }
 }
