--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -21,6 +21,6 @@ block content
               span.level-desc
                 | 难度：
                 strong= question.levelDesc()
-              a.edit-question(href='/question/' + question.id + '/answers') 看看都有哪些人回答了？
+              a.absolute.answers(href='/question/' + question.id + '/answers') 查看所有解答
               a.btn.edit-question(href='/job/' + job.id + '/question/' + question.id + '/edit') 编 辑
               button.btn.btn-warning.del-question(data-url='/job/' + job.id + '/question/' + question.id + '/update') 删 除
