--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -5,7 +5,7 @@ block css
   link(href="/css/profile.css", rel="stylesheet")
 block content
   .flex.profile-container
-    ul.left-nav
+    ul.nav.left-nav
       li
         a(href='/profile/account' class={active: pos == 'account'}) 账号与密码
         a(href='/profile/user_info' class={active: pos == 'user_info'}) 基本信息
