--- a/views/answers/edit.pug
+++ b/views/answers/edit.pug
@@ -2,7 +2,7 @@ extends ../layouts/main
 block js
   script(src='/ckeditor/ckeditor.js')
   script(src='/js/answers.js')
-  CKEDITOR.replace('content')
+  script CKEDITOR.replace('content')
 block css
   link(href="/css/answers.css", rel="stylesheet")
 block content
