--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -24,18 +24,15 @@ body {
   margin:auto;
 }
 
+.flex { display: flex; }
+
 main.content {
   flex:1;
   margin:1em auto;
 }
 
-.relative {
-  position: relative;
-}
-
-.absolute {
-  position: absolute;
-}
+.relative { position: relative; }
+.absolute { position: absolute; }
 
 /* horizontal center */
 .hcenter {
@@ -45,34 +42,31 @@ main.content {
 }
 
 /* text center */
-.text-center {
-  text-align: center;
-}
+.text-center { text-align: center; }
+.text-bold { font-weight: bold; }
 
-.text-bold {
-  font-weight: bold;
-}
+/* font-size */
+.small-font { font-size: 0.9em; }
+.smaller-font { font-size: 0.8em; }
 
-.flex {
-  display: flex;
-}
-
-p {
-  margin:0;
-}
-
+/* link */
 a {
   color: #0276FD;
   text-decoration: none;
   cursor: pointer;
 }
 
-.small-font {
-  font-size: 0.9em;
-}
+/* signup & login box */
+.login-box {
+  margin-top: 16px;
+  width: 50%;
+  padding: 1em;
+  border: 1px solid #aaa;
+  border-radius: 4px;
 
-.smaller-font {
-  font-size: 0.8em;
+  input[type='submit'] {
+    margin-right: 1em;
+  }
 }
 
 /* ++++++++++++++ form and controls +++++++++++++++++ */
@@ -211,6 +205,7 @@ ul.nav {
   margin: 0;
 }
 
+/* pop tab */
 .tab-container {
   border: 1px solid #ccc;
   padding: 6px 8px;
@@ -269,6 +264,7 @@ ul.nav {
   color: green;
   margin-bottom: 0.5em;
 }
+
 .flash-error {
   padding: 0.5em 0;
   color: red;
