--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -4,7 +4,7 @@ block js
 block css
   link(href="/css/login.css", rel="stylesheet")
 block content
-  div.login-container.hcenter
+  div.login-box.hcenter
     form(method='post', action='/login', class='login')
       .form-group
         label(for='email' class='label label-input') Email：
@@ -12,6 +12,6 @@ block content
       .form-group
         label(for='password' class='label label-input') 密码：
         input(type='password', name='password', id='password' class='form-control', required)
-      .form-group
+      div
         input(type='submit', value='登 陆' class='btn btn-primary')
         a(href='/password_reset' class='small-font') 忘记密码
