--- a/views/user/_company_show.pug
+++ b/views/user/_company_show.pug
@@ -1,5 +1,6 @@
 .basic-info
-  img(src=user.avatarUrl alt='头像' width='24px' height='24px')
+  span
+    img(src=user.avatarUrl() alt='头像' width='36px' height='36px')
   span= user.name
   span= user.business
   span= user.scaleValue()
@@ -8,9 +9,9 @@
     a(href=user.url)= user.url
 .company-desc!= user.desc
 .jobs
-  .text-bold 该公司发布的所有职位：
+  .text-bold.head 公司发布的所有职位：
   each job in jobs
-    .job
+    .job.flex
       span
         a(href='/job/' + job.id)= job.title
       span= job.address
