--- a/assets/sass/profile.scss
+++ b/assets/sass/profile.scss
@@ -36,9 +36,7 @@
 
       button {
         vertical-align:top;
-        &:first-of-type {
-          margin-right:6px;
-        }
+        margin:7px 6px 0 0;
       }
     }
 
