--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -1,5 +1,6 @@
 extends ../layouts/main
 block js
+  script(src='/ckeditor/ckeditor.js')
   script(src='/js/profile.js')
 block css
   link(href="/css/profile.css", rel="stylesheet")
