--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -91,7 +91,7 @@ input[type='radio'] {
   width: 100%;
   padding: 0.25em 0.5em;
   border: 1px solid #ccc;
-  border-radius: 3px;
+  border-radius: 4px;
   color: #777;
   line-height: 1.5;
   font-size: 0.875em;
@@ -105,7 +105,7 @@ select.form-control {
 }
 
 .form-control:focus {
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 0 2px rgba(0,0,0,.75);
 }
 
 textarea.form-control {
@@ -207,7 +207,7 @@ ul.nav {
 
 /* pop tab */
 .tab-container {
-  border: 1px solid #00f;
+  border: 1px solid #aaa;
   padding: 6px 8px;
   background-color: #eee;
   max-height: 400px;
@@ -258,6 +258,46 @@ ul.nav {
     li:hover {
       background-color: #aaa;
     }
+  }
+}
+
+/* popup list */
+.popuplist-container {
+  background-color: #fff;
+  border: 1px solid #aaa;
+  z-index: 88;
+
+  .popuplist-searchbar {
+    padding: 0.6em;
+    border-bottom: 1px solid #aaa;
+
+    input {
+      width: 100%;
+      display: inline-block;
+      border: 1px solid #ccc;
+      outline: none;
+      padding: 0.4em;
+      border-radius: 4px;
+      color: #777;
+      &:focus {
+        box-shadow: inset 0 0 1px rgba(0,200,0,.75);
+      }
+    }
+  }
+
+  .popuplist-items {
+    min-height: 22px;
+    max-height: 220px;
+    overflow: auto;
+  }
+
+  li {
+    padding: 0.2em 0.6em;
+    cursor: pointer;
+  }
+
+  li:hover {
+    background-color: #aaa;
   }
 }
 
