--- a/assets/sass/profile.scss
+++ b/assets/sass/profile.scss
@@ -179,6 +179,15 @@
           border-top:2px solid #777;
           border-bottom:2px solid #777;
 
+          /* disable image be selected*/
+          img {
+            -moz-user-select: -moz-none;
+            -o-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+          }
+
           .crop-container {
             position:relative;
 
@@ -206,29 +215,34 @@
               cursor:move;
             }
 
-            $edge_border_width: 8px;
-            $crop_edge_border: $edge_border_width dashed rgba(0,255,0,0.5);
+            $edge_border_width: 2px;
+            $edge_padding_width: 6px;
+            $crop_edge_border: $edge_border_width dashed rgba(255,0,0,0.5);
 
             .left-edge {
               border-left:$crop_edge_border;
+              padding-left:$edge_padding_width;
               z-index:1003;
               width:$edge_border_width;
               cursor:ew-resize;
             }
             .top-edge {
               border-top:$crop_edge_border;
+              padding-top:$edge_padding_width;
               z-index:1004;
               height:$edge_border_width;
               cursor:ns-resize;
             }
             .right-edge {
               border-right:$crop_edge_border;
+              padding-right:$edge_padding_width;
               z-index:1005;
               width:$edge_border_width;
               cursor:ew-resize;
             }
             .bottom-edge {
               border-bottom:$crop_edge_border;
+              padding-bottom:$edge_padding_width;
               z-index:1006;
               height:$edge_border_width;
               cursor:ns-resize;
