--- a/assets/sass/profile.scss
+++ b/assets/sass/profile.scss
@@ -219,33 +219,71 @@
             $edge_padding_width: 6px;
             $crop_edge_border: $edge_border_width dashed rgba(255,0,0,0.5);
 
+            .corner {
+              border: 2px solid rgba(255,0,0,0.5);
+              position: absolute;
+            }
+
+            .tl-corner {
+              cursor: nw-resize;
+              z-index:1007;
+            }
+            .tm-corner {
+              cursor: n-resize;
+              z-index:1008;
+            }
+            .tr-corner {
+              cursor: ne-resize;
+              z-index:1009;
+            }
+            .lm-corner {
+              cursor: w-resize;
+              z-index:1010;
+            }
+            .rm-corner {
+              cursor: e-resize;
+              z-index:1011;
+            }
+            .bl-corner {
+              cursor: sw-resize;
+              z-index:1012;
+            }
+            .bm-corner {
+              cursor: s-resize;
+              z-index:1013;
+            }
+            .br-corner {
+              cursor: se-resize;
+              z-index:1014;
+            }
+
             .left-edge {
               border-left:$crop_edge_border;
               padding-left:$edge_padding_width;
               z-index:1003;
               width:$edge_border_width;
-              cursor:ew-resize;
+              cursor:w-resize;
             }
             .top-edge {
               border-top:$crop_edge_border;
               padding-top:$edge_padding_width;
               z-index:1004;
               height:$edge_border_width;
-              cursor:ns-resize;
+              cursor:n-resize;
             }
             .right-edge {
               border-right:$crop_edge_border;
               padding-right:$edge_padding_width;
               z-index:1005;
               width:$edge_border_width;
-              cursor:ew-resize;
+              cursor:e-resize;
             }
             .bottom-edge {
               border-bottom:$crop_edge_border;
               padding-bottom:$edge_padding_width;
               z-index:1006;
               height:$edge_border_width;
-              cursor:ns-resize;
+              cursor:s-resize;
             }
 
           }
