--- a/views/profile/_account.pug
+++ b/views/profile/_account.pug
@@ -23,6 +23,14 @@
             .top-edge.crop-edge
             .right-edge.crop-edge
             .bottom-edge.crop-edge
+            .corner.tl-corner.crop-edge
+            .corner.tm-corner.crop-edge
+            .corner.tr-corner.crop-edge
+            .corner.lm-corner.crop-edge
+            .corner.rm-corner.crop-edge
+            .corner.bl-corner.crop-edge
+            .corner.bm-corner.crop-edge
+            .corner.br-corner.crop-edge
         input(type='hidden' name='origin_img_path')
         input(type='hidden' name='x')
         input(type='hidden' name='y')
