--- a/views/profile/_account.pug
+++ b/views/profile/_account.pug
@@ -19,10 +19,10 @@
             .cropArea
               img.crop-img
             .move-area.crop-edge
-            .left-edge.crop-edge
-            .top-edge.crop-edge
-            .right-edge.crop-edge
-            .bottom-edge.crop-edge
+            .left-edge.crop-edge.sep-line
+            .top-edge.crop-edge.sep-line
+            .right-edge.crop-edge.sep-line
+            .bottom-edge.crop-edge.sep-line
             .corner.tl-corner.crop-edge
             .corner.tm-corner.crop-edge
             .corner.tr-corner.crop-edge
