--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -5,14 +5,18 @@
 }
 
 .show-job {
+  padding: 0 1em;
+  border: 1px solid #aaa;
+
   h2 {
-    padding-bottom: 0.5em;
-    border-bottom: 3px solid #aaa;
+    padding: 0.5em 0;
+    border-bottom: 4px solid #aaa;
+    margin-top: 0;
   }
 
   .job-section {
     padding-bottom: 0.5em;
-    border-bottom: 2px solid #aaa;
+    border-bottom: 1px solid #aaa;
   }
 
   .job-basic {
@@ -28,47 +32,44 @@
   }
 
   .job-apply {
-    margin-top: 1em;
+    padding: 1em 0;
+
     button {
       font-size: 1.2em;
       width: 10%;
     }
   }
 
-  .question:not(:last-child) {
-    margin-bottom: 0.5em;
-    padding: 0.5em 0;
-    border-bottom: 1px solid #aaa;
-  }
+  .questions {
+    padding: 1em;
+    border: 1px solid #bbb;
+    background-color: #eee;
 
-  .question:first-of-type {
-    padding-top: 0;
+    h3 {
+      margin-top: 0;
+      padding-bottom: 1em;
+      border-bottom: 2px solid #aaa;
+    }
   }
 
   .question {
-    .content {
-      margin-top: 0.5em;
-      padding-bottom: 0.5em;
-      border-bottom: 1px dashed #777;
+    padding: 1em;
+
+    &:nth-child(even) {
+      background-color: #ccc;
+    }
+
+    &:nth-child(odd) {
+      background-color: #bbb;
     }
 
     .answer {
-      overflow: hidden;
-      padding-top: 0.5em;
+      padding: 1em;
+      background-color: #eee;
+      color: #060;
 
-      .ops {
-        float: right;
-        a {
-          margin-right: 0.5em;
-        }
-      }
-
-      .content {
-        margin-bottom: 0.5em;
-      }
-
-      .to-answer {
-        float: right;
+      a {
+        margin-right: 0.5em;
       }
     }
   }
