--- a/assets/sass/profile.scss
+++ b/assets/sass/profile.scss
@@ -63,7 +63,7 @@
         padding-right:6px;
 
         .job-title {
-          margin-top:0;
+          margin:0;
           padding-bottom:6px;
           border-bottom:1px solid #bbb;
           position: relative;
@@ -111,7 +111,6 @@
         .job-status {
           margin-top: 6px;
           padding-top: 6px;
-          border-top:1px dashed #bbb;
 
           .apply-pending {
             color: blue;
