--- a/views/jobs/show.pug
+++ b/views/jobs/show.pug
@@ -34,5 +34,5 @@ block content
     .job-apply.text-center
         if applied
           button(class='btn btn-disabled' disabled) 已 申 请
-        else if !req.currentUser
-          button(class='btn btn-primary') 申 请
+        else
+          button(class='btn btn-primary' data-job-id=job.id) 申 请
