--- a/views/profile/_company_jobs.pug
+++ b/views/profile/_company_jobs.pug
@@ -10,7 +10,7 @@
             a.appliers-link(href='/job/' + job.id + '/appliers')= job._appliersSize
           a.job-edit(href='/job/' + job.id + '/edit') 编辑
           a.job-questions(href='/job/' + job.id + '/questions') 题目列表
-        p.job-basics
+        p.job-basics.small-font
           span 发布日期：<strong>#{job.createdAt.toLocaleDateString()}</strong>
           span 工作地点：<strong>#{job.address}</strong>
           span 薪资：    <strong>#{job.displaySalary}</strong>
