--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -33,6 +33,9 @@ main.content {
 
 .relative { position: relative; }
 .absolute { position: absolute; }
+.round-border {
+  border-radius: 4px;
+}
 
 /* horizontal center */
 .hcenter {
@@ -46,6 +49,8 @@ main.content {
 .text-bold { font-weight: bold; }
 
 /* font-size */
+.large-font { font-size: 1.2em; }
+.larger-font { font-size: 1.4em; }
 .small-font { font-size: 0.9em; }
 .smaller-font { font-size: 0.8em; }
 
@@ -55,6 +60,12 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
+
+/* align */
+.vertical-middle {
+  vertical-align: middle;
+}
+
 
 /* signup & login box */
 .login-box {
