--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,6 +4,7 @@ html(lang='zh')
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title= title
+    link(href="/css/font-awesome.css", rel="stylesheet")
     block css
   body
     include ./_head.pug
