--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -1,26 +1,27 @@
 header
   .content.header-container.flex
     a(href='/' class='logo') 学做网
-    span.user-nav
-      - var cu = req.currentUser
-      if cu
-        a.msg-notify.has-msg(href='')
-          span(class='fa fa-bell vertical-middle')
-          sup 4
-        span.user-center
-          a.profile-index(href='/profile')
-            img.round-border.vertical-middle(src=cu.avatar width='24px' height='24px' alt='avatar')
-            span.vertical-middle(class='fa fa-caret-down menu-show')
-          ul.profile-dropdown.nav.small-font.round-border
-            li.text-center #{cu.name}, 你好
-            li.text-center
-              a(href='/profile/user_info') 基本信息
-            li.text-center
-              a(href='/profile/jobs') 职位信息
-            li.text-center
-              a(href='/profile/account') 账号与密码
-            li.text-center
-              a(href='/logout') 退出
-      else
+    - var cu = req.currentUser
+    if cu
+      a.msg-notify.has-msg(href='/profile/message')
+        span(class='fa fa-bell vertical-middle')
+        sup 4
+        span.msg-tip.small-font.round-border 你有未读消息
+      span.user-center
+        a.profile-index(href='/profile')
+          img.round-border.vertical-middle(src=cu.avatar width='24px' height='24px' alt='avatar')
+          span.vertical-middle(class='fa fa-caret-down menu-show')
+        ul.profile-dropdown.nav.small-font.round-border
+          li.text-center #{cu.name}, 你好
+          li.text-center
+            a(href='/profile/user_info') 基本信息
+          li.text-center
+            a(href='/profile/jobs') 职位信息
+          li.text-center
+            a(href='/profile/account') 账号与密码
+          li.text-center
+            a(href='/logout') 退出
+    else
+      span.logsig
         a(href='login' class='btn btn-primary login') 登陆
         a(href='signup' class='btn signup') 注册
