--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -6,19 +6,22 @@ block css
   link(href="/css/profile.css", rel="stylesheet")
 block content
   .flex.profile-container
-    ul.nav.left-nav
+    ul.nav.left-nav.small-font.text-center
       li
-        a(href='/profile/account' class={active: pos == 'account'}) 账号与密码
         a(href='/profile/user_info' class={active: pos == 'user_info'}) 基本信息
       li
-        if currentUser.type == 0
+        if req.currentUser.type == 0
           a(href='/profile/jobs' class={active: pos == 'jobs'}) 申请的职位
         else
           a(href='/profile/jobs' class={active: pos == 'jobs'}) 发布的职位
+      li
+        a(href='/profile/message' class={active: pos == 'message'}) 消息中心
+      li
+        a(href='/profile/account' class={active: pos == 'account'}) 账号与密码
     div.right-content
       if pos == 'account'
         include _account.pug
-      if pos == 'user_info'
+      else if pos == 'user_info'
         if currentUser.type == 0
           include _student.pug
         else
@@ -28,3 +31,5 @@ block content
           include _student_jobs.pug
         else
           include _company_jobs.pug
+      else if pos == 'message'
+        include _message.pug
