--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -59,6 +59,14 @@ a {
   color: #0276FD;
   text-decoration: none;
   cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.nav a {
+  text-decoration: none;
 }
 
 /* align */
