--- a/views/profile/_student_jobs.pug
+++ b/views/profile/_student_jobs.pug
@@ -1,5 +1,5 @@
 .jobs-container
-  .job-category
+  .job-category.small-font
     a(href='/profile/jobs?status=all' class={active: status == 'all'}) 全部职位
     a(href='/profile/jobs?status=replied' class={active: status == 'replied'}) 已经回复的职位
     a(href='/profile/jobs?status=unreplied' class={active: status == 'unreplied'}) 还未回复的职位
