--- a/assets/sass/answers.scss
+++ b/assets/sass/answers.scss
@@ -65,7 +65,7 @@
 }
 
 /* answer show */
-.answer-content .content {
+.answer-content .body {
   margin: 0.5em 0;
   padding-bottom: 0.5em;
   border-bottom: 2px solid #777;
