--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -4,6 +4,7 @@
  * 2. font
  * 3. button
  */
+@import 'common/normalize';
 
 * {
   box-sizing: border-box;
@@ -14,9 +15,14 @@ body {
   font-family: Helvetica, Tahoma, Arial,
                STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑",
                SimSun, "宋体", sans-serif;
-  display:flex;
   flex-flow:column;
   min-height:100vh;
+}
+
+main {
+  flex:1;
+  margin-top:1em;
+  margin-bottom:1em;
 }
 
 .content {
@@ -25,17 +31,9 @@ body {
 }
 
 .flex { display: flex; }
-
-main.content {
-  flex:1;
-  margin:1em auto;
-}
-
 .relative { position: relative; }
 .absolute { position: absolute; }
-.round-border {
-  border-radius: 4px;
-}
+.round-border { border-radius: 4px; }
 
 /* horizontal center */
 .hcenter {
@@ -44,15 +42,14 @@ main.content {
   display:block;
 }
 
-/* text center */
+/* text */
 .text-center { text-align: center; }
 .text-bold { font-weight: bold; }
-
-/* font-size */
 .large-font { font-size: 1.2em; }
 .larger-font { font-size: 1.4em; }
 .small-font { font-size: 0.9em; }
 .smaller-font { font-size: 0.8em; }
+.vertical-middle { vertical-align: middle; }
 
 /* link */
 a {
@@ -69,223 +66,11 @@ a {
   text-decoration: none;
 }
 
-/* align */
-.vertical-middle {
-  vertical-align: middle;
-}
-
-
-/* signup & login box */
-.login-box {
-  margin-top: 16px;
-  width: 50%;
-  padding: 1em;
-  border: 1px solid #aaa;
-  border-radius: 4px;
-
-  input[type='submit'] {
-    margin-right: 1em;
-  }
-}
-
-/* ++++++++++++++ form and controls +++++++++++++++++ */
-.label {
-  display: inline-block;
-}
-
-.label-radio {
-  margin-right: 0.5em;
-}
-
-input[type='radio'] {
-  margin-right: 0.5em;
-}
-
-.form-group {
-  margin-bottom: 1em;
-}
-
-.form-control {
-  display: inline-block;
-  width: 100%;
-  padding: 0.25em 0.5em;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  color: #333;
-  line-height: 1.5;
-  height: 2em;
-  font-size: 0.9em;
-  outline:none;
-  margin-top: 0.5em;
-}
-
-.form-control:focus {
-  border-color: #00a;
-}
-
-textarea.form-control {
-  height: auto;
-}
-
-textarea.rich-editor + div {
-  margin-top: 0.5em;
-}
-
-label.input-error {
-  display: inline-block;
-  color: #f00;
-  border: none;
-  font-size: 0.8em;
-}
-
-.form-control-hint {
-  color: #777;
-  font-size: 0.8em;
-  font-family: NSimSun, Microsoft YaHei;
-  margin-top:6px;
-  line-height:1.4;
-}
-/* ------------------ form and controls ----------------- */
-
-/* normal button look*/
-.btn {
-  display: inline-block;
-  padding: 0.25em 0.5em;
-  font-size: 0.875em;
-  line-height: 1.5;
-  color: #eee;
-  text-align:center;
-  vertical-align: middle;
-  cursor: pointer;
-  background-color: #53868B;
-  border: 1px solid #53868B;
-  border-radius: 3px;
-  cursor:pointer;
-}
-
-.btn:hover {
-  background-color: #4A777A;
-}
-
-.btn-disabled {
-  cursor: default;
-}
-
-.btn-disabled:hover {
-  background-color: #53868B;
-}
-
-/* primary button look*/
-.btn-primary {
-  background-color: #2E37FE;
-  border: 1px solid #2E37FE;
-}
-
-.btn-primary:hover {
-  background-color: #0000CD;
-}
-
-/* warning button look*/
-.btn-warning {
-  background-color: #B13E0F;
-  border: 1px solid #B13E0F;
-}
-
-.btn-warning:hover {
-  background-color: #8B2500;
-}
-
-/* cancel button */
-.btn-cancel {
-  background-color: #B18D92;
-  border: 1px solid #B18D92;
-}
-
-.btn-cancel:hover {
-  background-color: #8D5E64;
-}
-
 /* list */
 ul.nav {
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-/* pop tab */
-.tab-container {
-  border: 1px solid #aaa;
-  padding: 6px 8px;
-  background-color: #fff;
-  max-height: 400px;
-  overflow: auto;
-  z-index: 10;
-
-  li, {
-    display: inline-block;
-    cursor: pointer;
-    padding: 4px 8px;
-  }
-
-  .tab-header {
-    li {
-      border: 1px solid #ccc;
-      border-bottom: none;
-
-      &.tab-label-active {
-        border-color: #00a;
-      }
-    }
-
-    .tab-clear {
-      float: right;
-      padding: 4px 0;
-      display: inline-block;
-    }
-  }
-
-  .tab-content {
-    border-top: 1px solid #00a;
-    padding-top: 6px;
-
-    li.tab-item-active, li:hover {
-      background-color: #aaa;
-    }
-  }
-}
-
-/* popup list */
-.popuplist-container {
-  background-color: #fff;
-  border: 1px solid #aaa;
-  z-index: 88;
-
-  .popuplist-searchbar {
-    padding: 0.6em;
-    border-bottom: 1px solid #aaa;
-
-    input {
-      width: 100%;
-      display: inline-block;
-      border: 1px solid #ccc;
-      outline: none;
-      padding: 0.4em;
-      border-radius: 4px;
-      color: #777;
-      &:focus {
-        box-shadow: inset 0 0 1px rgba(0,200,0,.75);
-      }
-    }
-  }
-
-  li {
-    padding: 0.2em 0.6em;
-    cursor: pointer;
-  }
-
-  li:hover, .popuplist-item-active {
-    background-color: #aaa;
-  }
 }
 
 /* flash */
@@ -300,3 +85,7 @@ ul.nav {
   color: red;
   margin-bottom: 0.5em;
 }
+
+@import 'common/form';
+@import 'common/popup_tab';
+@import 'common/popup_list';
