--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -1,13 +1,2 @@
 @import 'main';
-
-.index-container {
-  margin-top: 16px;
-  width: 50%;
-  padding: 1em;
-  border: 1px solid #aaa;
-  border-radius: 4px;
-
-  input[type='submit'] {
-    margin-right: 1em;
-  }
-}
+@import 'common/login_box'
