--- a/views/answers/show.pug
+++ b/views/answers/show.pug
@@ -13,7 +13,7 @@ block content
       .question-content!= question.content
     .answer-content
       strong 答案：
-      .content.small-font!= answer.content
+      .body.small-font!= answer.content
       .opts
         if req.currentUser.type == 0
           a.edit-answerbtn(href='/question/' + question.id + '/answer/' + answer.id + '/edit') 修 改
