--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -6,10 +6,11 @@ html(lang='zh')
     title= title
     link(href="/css/font-awesome.css", rel="stylesheet")
     block css
-  body
+  body.flex
     include ./_head.pug
-    main.content
-      block content
+    main
+      .content
+        block content
     include ./_foot.pug
     script(src='/js/vendor.js')
     block js
